--- a/app/src/main/res/layout/fragment_search_station.xml
+++ b/app/src/main/res/layout/fragment_search_station.xml
@@ -11,7 +11,7 @@
     android:orientation="vertical">
 
 
-    <EditText
+    <com.ssoft.common.widget.CustomEditText
         android:id="@+id/searchET"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -56,7 +56,7 @@
 
         >
 
-        <TextView
+        <com.ssoft.common.widget.CustomTextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -76,7 +76,7 @@
         android:layout_weight="1"
         android:background="@drawable/bg_yel">
 
-        <TextView
+        <com.ssoft.common.widget.CustomTextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
