--- a/app/src/main/res/layout/fragment_warning_desc.xml
+++ b/app/src/main/res/layout/fragment_warning_desc.xml
@@ -38,7 +38,7 @@
 
         </androidx.recyclerview.widget.RecyclerView>
 
-        <TextView
+        <com.ssoft.common.widget.CustomTextView
             android:visibility="gone"
             android:id="@+id/stateTV"
             android:layout_width="wrap_content"
