--- a/app/src/main/res/layout/activity_map_view.xml
+++ b/app/src/main/res/layout/activity_map_view.xml
@@ -46,7 +46,7 @@
             android:layout_gravity="center"
             android:src="@drawable/rain_tornado" />
 
-        <TextView
+        <com.ssoft.common.widget.CustomTextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
@@ -54,7 +54,7 @@
             android:textColor="@color/red"
             android:textStyle="bold" />
 
-        <TextView
+        <com.ssoft.common.widget.CustomTextView
             android:id="@+id/countTV"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -85,7 +85,7 @@
             android:layout_gravity="center"
             android:src="@drawable/rain_thunder" />
 
-        <TextView
+        <com.ssoft.common.widget.CustomTextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
@@ -94,7 +94,7 @@
             android:textSize="14sp"
             android:textStyle="bold" />
 
-        <TextView
+        <com.ssoft.common.widget.CustomTextView
             android:id="@+id/count2TV"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -125,7 +125,7 @@
             android:layout_gravity="center"
             android:src="@drawable/rain_1" />
 
-        <TextView
+        <com.ssoft.common.widget.CustomTextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
@@ -133,7 +133,7 @@
             android:textColor="@color/green"
             android:textStyle="bold" />
 
-        <TextView
+        <com.ssoft.common.widget.CustomTextView
             android:id="@+id/count3TV"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -163,7 +163,7 @@
             android:layout_gravity="center"
             android:src="@drawable/overcast" />
 
-        <TextView
+        <com.ssoft.common.widget.CustomTextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
@@ -171,7 +171,7 @@
             android:textColor="@color/blue"
             android:textStyle="bold" />
 
-        <TextView
+        <com.ssoft.common.widget.CustomTextView
             android:id="@+id/count4TV"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -207,7 +207,7 @@
               android:layout_gravity="center"
               android:src="@drawable/overcast" />
 
-          <TextView
+          <com.ssoft.common.widget.CustomTextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:gravity="center"
