--- a/app/src/main/res/layout/activity_report.xml
+++ b/app/src/main/res/layout/activity_report.xml
@@ -39,7 +39,7 @@
             android:layout_height="60dp"
             android:layout_marginTop="@dimen/dimen16">
 
-            <TextView
+            <com.ssoft.common.widget.CustomTextView
                 android:id="@+id/titleTV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -66,7 +66,7 @@
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 
-    <TextView
+    <com.ssoft.common.widget.CustomTextView
         android:id="@+id/stateTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
