--- a/app/src/main/res/layout/activity_search_station.xml
+++ b/app/src/main/res/layout/activity_search_station.xml
@@ -49,7 +49,7 @@
                 android:layout_height="60dp"
                 android:layout_marginTop="@dimen/dimen16">
 
-                <TextView
+                <com.ssoft.common.widget.CustomTextView
                     android:id="@+id/titleTV"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
