--- a/app/src/main/res/layout/activity_warning_desc.xml
+++ b/app/src/main/res/layout/activity_warning_desc.xml
@@ -20,7 +20,7 @@
         android:orientation="vertical">
 
 
-        <TextView
+        <com.ssoft.common.widget.CustomTextView
             android:visibility="gone"
             android:id="@+id/titleTV"
             android:textColor="@color/white"
@@ -58,7 +58,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="4">
-                <TextView
+                <com.ssoft.common.widget.CustomTextView
                     android:id="@+id/titlesTV"
                     android:textColor="@color/wi"
                     android:layout_width="match_parent"
@@ -66,7 +66,7 @@
                     android:textSize="@dimen/txt18"
                     android:text="บ้านวังปประจัน"
                     android:gravity="center"/>
-                <TextView
+                <com.ssoft.common.widget.CustomTextView
                     android:id="@+id/txt1TV"
                     android:textColor="#D27E10"
                     android:layout_marginBottom="-4dp"
@@ -75,7 +75,7 @@
                     android:textSize="@dimen/txt15"
                     android:text="บ้านวังปประจัน"
                     android:gravity="center"/>
-                <TextView
+                <com.ssoft.common.widget.CustomTextView
                     android:id="@+id/txt2TV"
                     android:textColor="#D27E10"
                     android:layout_width="match_parent"
