--- a/app/src/main/res/layout/bottom_sheet_layout_photo.xml
+++ b/app/src/main/res/layout/bottom_sheet_layout_photo.xml
@@ -9,7 +9,7 @@
     app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
 
 
-    <TextView
+    <com.ssoft.common.widget.CustomTextView
         android:id="@+id/menu_bottom_sheet_camera"
         android:layout_width="match_parent"
         android:layout_height="60dp"
@@ -20,7 +20,7 @@
         android:padding="12dp"
         android:text="ถ่ายภาพ" />
 
-    <TextView
+    <com.ssoft.common.widget.CustomTextView
         android:id="@+id/menu_bottom_sheet_img"
         android:layout_width="match_parent"
         android:layout_height="60dp"
