--- a/app/src/main/res/layout/bottom_sheet_maps_layout.xml
+++ b/app/src/main/res/layout/bottom_sheet_maps_layout.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:padding="16dp">
 
-    <TextView
+    <com.ssoft.common.widget.CustomTextView
         android:id="@+id/test_bottom"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
