--- a/app/src/main/res/layout/item_string_view.xml
+++ b/app/src/main/res/layout/item_string_view.xml
@@ -15,7 +15,7 @@
     <!--        android:orientation="vertical">-->
     <!--        -->
 
-    <TextView
+    <com.ssoft.common.widget.CustomTextView
         android:textColor="@color/wi"
         android:gravity="center"
         android:layout_width="match_parent"
