--- a/app/src/main/res/layout/item_warning.xml
+++ b/app/src/main/res/layout/item_warning.xml
@@ -16,7 +16,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <TextView
+        <com.ssoft.common.widget.CustomTextView
             android:layout_marginTop="-4dp"
             android:layout_marginBottom="-4dp"
             android:text="บ้านหางนา "
@@ -25,7 +25,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/titleTV" />
-        <TextView
+        <com.ssoft.common.widget.CustomTextView
             android:layout_marginTop="-2dp"
             android:layout_marginBottom="-4dp"
             android:text="บ้านหางนา"
@@ -34,7 +34,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/txt1TV" />
-        <TextView
+        <com.ssoft.common.widget.CustomTextView
             android:layout_marginBottom="-4dp"
             android:text="บ้านหางนา"
             android:textSize="@dimen/txt14"
@@ -72,7 +72,7 @@
                 android:layout_weight="1"
                 android:orientation="vertical">
 
-                <TextView
+                <com.ssoft.common.widget.CustomTextView
                     android:textColor="@color/wi"
                     android:gravity="center"
                     android:layout_marginBottom="-4dp"
@@ -103,14 +103,14 @@
                         android:layout_height="wrap_content"
                         android:orientation="horizontal">
 
-                        <TextView
+                        <com.ssoft.common.widget.CustomTextView
                             android:textStyle="bold"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textSize="32sp"
                             android:id="@+id/countTV"
                             android:textColor="@color/wi"/>
-                        <TextView
+                        <com.ssoft.common.widget.CustomTextView
                             android:layout_marginLeft="@dimen/dimen4"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
