--- a/app/src/main/res/layout/item_warning_report.xml
+++ b/app/src/main/res/layout/item_warning_report.xml
@@ -24,7 +24,7 @@
         android:orientation="vertical">
 
 
-        <TextView
+        <com.ssoft.common.widget.CustomTextView
             android:textColor="@color/wi"
             android:id="@+id/houseTV"
             android:layout_width="match_parent"
@@ -43,7 +43,7 @@
         android:layout_gravity="right"
         android:orientation="vertical">
 
-        <TextView
+        <com.ssoft.common.widget.CustomTextView
             android:id="@+id/numberTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -54,7 +54,7 @@
             android:textColor="@color/wi"
             android:textSize="32sp" />
 
-        <TextView
+        <com.ssoft.common.widget.CustomTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
